--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>Archives</title>
 </head>
 <body>
+<h2>Magazine Archives</h2>
 
 <h1>DIY Builder Vol 1 Iss 1</h1>
 <a href="https://mrblue-publishing.github.io/DIY-Builder-Vol1.Iss1/#page=1">Click Here</a>
