--- a/index.html
+++ b/index.html
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Archives</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css">
 </head>
 <body>
 <h1>Magazine Archives</h1>
 
 <h2>DIY Builder Vol 1 Iss 1</h2>
 <a href="https://mrblue-publishing.github.io/DIY-Builder-Vol1.Iss1/#page=1">Click Here</a>
+
+  <!-- Optional Javascript: Bootstrap Bundle with Popper -->
+  <script type="text/javascript" src="bootstrap5/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
