--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 <h2>DIY Builder Vol 1 Iss 1</h2>
 <a href="https://mrblue-publishing.github.io/DIY-Builder-Vol1.Iss1/#page=1">Click Here</a>
 
+<footer class="text-muted py-5">
+  <div class="container">
+    <p class="float-end mb-1">
+      <a href="#">Back to top</a>
+    </p>
+    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
+    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="../getting-started/introduction/">getting started guide</a>.</p>
+  </div>
+</footer>
+
   <!-- Optional Javascript: Bootstrap Bundle with Popper -->
   <script type="text/javascript" src="bootstrap5/js/bootstrap.bundle.min.js"></script>
 
