--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       <a href="#">Back to top</a>
     </p>
     <p class="mb-1">Album example is &copy; Bootstrap.</p>
-    <p class="mb-0">Powered by: <a href="https://github.com/">Github</a> and <a href="https://flowpaper.com/">Flowpaper</a>.</p>
+    <p class="mb-0">Powered by: <a href="https://github.com/">Github</a> and <a href="https://heyzine.com/">Heyzine</a>.</p>
   </div>
 </footer>
 
